--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300;400;500;600;700;800&display=swap");
+body {
+  font-family: "Noto Sans", sans-serif;
+}
+
 ::-webkit-scrollbar {
   scroll-behavior: smooth;
   display: none;
@@ -13,10 +18,10 @@
   transition: 0.4s all ease-in-out;
 }
 
-.img_container:hover .backdrop_image{
+.img_container:hover .backdrop_image {
   opacity: 1;
 }
 
-.img_container:hover .image{
+.img_container:hover .image {
   opacity: 0;
 }
